# philosofool

./: .gitignore  LICENSE  README.md  chatbot_main.py  clustering.ipynb  model_scores.json  model_scores_1.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json.sample
fantasy_world_builder/: pyproject.toml  world_build_conversation.txt
fantasy_world_builder/evaluations/: README.md  evaluate_database.py  metrics.py
fantasy_world_builder/fantasy_world_builder/: builder.py  database.py  researcher.py  schema.py  serialize.py  supervisor.py  writer.py
fantasy_world_builder/tests/: conftest.py  test_builder.py  test_database.py  test_supervisor.py  test_writer.py
feature_engineering/: batter_pitcher_matchups.parquet  data.py
music/reivews/: song_in_the_key_of_life.md
notebooks/: enzymes_test.py  graph_nn.ipynb  sandbox.ipynb  train_torch_models.ipynb
src/philosofool/torch/: callbacks.py  metrics.py  nn_graph.py  nn_loop.py  nn_models.py  visualize.py
src/philosofool/torch/experimental/: nn_loop.py
tests/: conftest.py  test_callbacks.py  test_metrics.py  test_nn_loop.py  test_nn_model.py
tests/fantasy_world_builder/: test_builder.py  test_database.py  test_researcher.py  test_serialize.py  test_writer.py
tests/fantasy_world_builder/evaluations/: README.md  database.py
tests/test_feature_engineering/: conftest.py  test_data.py
