[build-system]

requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philosofool"                   # Your package name (must match src/ dir if using src layout)
version = "0.1.0"                    # Semantic version
description = "Tools for the sort of work I find myself doing."
readme = "README.md"                 # Long description
license = { text = "MIT" }


# Specify your Python compatibility
requires-python = ">=3.10"

# Dependencies installed automatically
dependencies = [
    "numpy>=1.26",
    "torch>=2.8"
]

[tool.setuptools]
package-dir = { "" = "src" }   # Use src/ layout
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
